fix: Remove grid columns o videoBlockWrap

--- a/src/app/(frontend)/_components/VideoBlock/VideoBlock.module.scss
+++ b/src/app/(frontend)/_components/VideoBlock/VideoBlock.module.scss
@@ -4,10 +4,6 @@
 
 .videoBlockWrap {
   @include grid(10);
-
-  @include media-breakpoint-down(lg) {
-    @include grid(8);
-  }
 }
 
 .videoPlayerWrap {
